Refactor(Response) : 리소스 파일 내용 읽기 로직 수정
파일 내용을 읽는 건 간단한 작업이므로 추가적인 리소스 사용 / 복잡성을 피하기 위해 java.nio가 아닌 java.io를 활용하도록 수정했다